# nix-templates

./: CLAUDE.md  README.md  flake.nix
c-script/: hello.c  hello.cpp
cl-script/: hello-script-with-tests.lisp  hello-script.lisp
flakeonly/haskell/: flake.nix
flakeonly/python/: flake.nix
haskell-project/: flake.nix
haskell-script/: HelloScript.hs  HelloScriptWithTests.hs
projects/haskell/: README.md  example.cabal  flake.nix
projects/haskell/app/: Main.hs
projects/haskell/bench/: Bench.hs
projects/haskell/src/: MyLib.hs
projects/haskell/test/: MyLibSpec.hs
projects/python/: README.md  flake.nix  pyproject.toml
projects/python/src/my_python_app/: __init__.py  main.py
projects/python/tests/: __init__.py  test_main.py
python-script/: hello-script.py
scripts/c/: hello.c  hello.cpp
scripts/cl/: hello-script-with-tests.lisp  hello-script.lisp
scripts/haskell/: CliScript.hs  HelloScript.hs  HelloScriptWithTests.hs
scripts/python/: hello-script.py
